# qt_networking

./: CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp
contributions/: project_guidelines.md
server/: CMakeLists.txt  main.cpp
server/include/: api_handler.h  server_daemon.h
server/src/: api_request.cpp  server_daemon.cpp
shared/: CMakeLists.txt
shared/include/: utils.h
shared/src/: utils.cpp
